precision du projet

--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
                 <h1>bonjour soyez les bienvenu sur ma page</h1> 
 
             </div>
-                <p>je vous présente mes première réalisation</p>
+                <p>je vous présente mes première réalisation de mes premiers projet</p>
             <nav>
                
                 
-                <a href="http://devweb.alwaysdata.net/lyderic/projets/projet_general/lettre/lettre.html" target="_blank">lettre</a><br>
-                <a href="http://devweb.alwaysdata.net/lyderic/projets/projet_general/formulaire/formulaire.html" target="_blank">formulaire</a><br>
-                <a href="http://devweb.alwaysdata.net/lyderic/projets/projet_general/Tableaux/table.html" target="_blank">tableaux</a><br>
-                <a href="https://devweb.alwaysdata.net/lyderic/projets/projet_general/media/media.html" target="_blank">media</a><br>
+                <a href="https://lydericdavid.github.io/lettre/" target="_blank">lettre</a><br>
+                <a href="https://lydericdavid.github.io/formulaire/" target="_blank">formulaire</a><br>
+                <a href="https://lydericdavid.github.io/tableaux/" target="_blank">tableaux</a><br>
+                <a href="https://lydericdavid.github.io/media/" target="_blank">media</a><br>
             </nav>
 
 
