--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
             <nav>
                
                 
-                <a href="https://lydericdavid.github.io/lettre/" target="_blank">lettre</a><br>
-                <a href="https://lydericdavid.github.io/formulaire/" target="_blank">formulaire</a><br>
-                <a href="https://lydericdavid.github.io/tableaux/" target="_blank">tableaux</a><br>
-                <a href="https://lydericdavid.github.io/media/" target="_blank">media</a><br>
+                <a href="https://lydericdavid.github.io/lettre/lettre.html" target="_blank">lettre</a><br>
+                <a href="https://lydericdavid.github.io/formulaire/formulaire.html" target="_blank">formulaire</a><br>
+                <a href="https://lydericdavid.github.io/tableaux/table.html" target="_blank">tableaux</a><br>
+                <a href="https://lydericdavid.github.io/media/media.html" target="_blank">media</a><br>
+
             </nav>
 
 
