--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         <p>
                             Je me presente à vous, je suis lydéric AGBODE ma page est encore vide mais laissé encore un peu de temps <br>
                             Revenez plus tard vous ne serez pas décu. <br>
-                            merci pour votre compréhension
+                            merci pour votre compréhension.
                         </p>
                     </article>
                    
