--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <main>
             <div>
-                <h1>bonjour soyez les bienvenu sur ma page</h1> 
+                <h1>bonjour soyez les bienvenus sur ma page</h1> 
 
             </div>
                 <p>je vous présente mes première réalisation de mes premiers projets</p>
@@ -19,7 +19,7 @@
                 <a href="https://lydericdavid.github.io/lettre/lettre.html" target="_blank">lettre</a><br>
                 <a href="https://lydericdavid.github.io/formulaire/formulaire.html" target="_blank">formulaire</a><br>
                 <a href="https://lydericdavid.github.io/tableaux/table.html" target="_blank">tableaux</a><br>
-                <a href="https://lydericdavid.github.io/media/media.html" target="_blank">media</a><br>
+                <a href="https://lydericdavid.github.io/media/tdmedia.html" target="_blank">media</a><br>
 
             </nav>
 
