modification du media

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <a href="https://lydericdavid.github.io/lettre/lettre.html" target="_blank">lettre</a><br>
                 <a href="https://lydericdavid.github.io/formulaire/formulaire.html" target="_blank">formulaire</a><br>
                 <a href="https://lydericdavid.github.io/tableaux/table.html" target="_blank">tableaux</a><br>
-                <a href="https://lydericdavid.github.io/media/tdmedia.html" target="_blank">media</a><br>
+                <a href="https://lydericdavid.github.io/media/tdmedia" target="_blank">media</a><br>
 
             </nav>
 
@@ -28,8 +28,8 @@
                     <article>
                         <p>
                             Je me presente à vous, je suis lydéric AGBODE ma page est encore vide mais laissé encore un peu de temps <br>
-                            Revenez plus tard vous ne serez pas décu. <br>
-                            merci pour votre compréhension.
+                            Revenez plus tard vous ne serez pas décu. <br><br>
+                            merci les amis pour votre compréhension.
                         </p>
                     </article>
                    
